# NKGen

./: CMakeLists.txt  README.md
cmake/: NKGen.cmake
src/: main.c
src/header/: header.c
src/parser/: parser.c  parser.h
src/source/: source.c  source.h
src/translator/: translator.c  translator.h
